--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitOverride": true,
     "resolveJsonModule": true,
+    "rewriteRelativeImportExtensions": true,
     "importHelpers": false,
     "experimentalDecorators": false
   },
-  "include": ["calculate-size.ts"],
+  "include": ["scripts/*.ts"],
   "exclude": []
 }
